--- a/app/assets/stylesheets/shared/colors.scss
+++ b/app/assets/stylesheets/shared/colors.scss
@@ -6,6 +6,7 @@ $azure-blue: #0080FF;
 $egyptian-blue: #1034A6;
 
 $gray1: #808080;
+$light-gray1: #D3D3D3;
 
 $hibiscus-red: #B43757;
 $vermilion-red: #7E191B;
