--- a/app/views/layouts/_side_bar_menu.html.erb
+++ b/app/views/layouts/_side_bar_menu.html.erb
@@ -1,7 +1,9 @@
 <nav class="side-bar__container">
   <div class="side-bar__user-details-summary text-center">
     <img src="https://robohash.org/superman" alt="user image" class="img-thumbnail">
-    <%= 'john.doe@gmail.com' %>
+    <div class="side__bar-user-profile-link-container">
+      <%= link_to(current_user.email, root_path, class: 'side__bar-user-profile-link') %>
+    </div>
   </div>
   <br>
   <div class="side-bar__menu-list-container">
@@ -48,7 +50,7 @@
         </li>
       <% end %>
 
-      <%= link_to(root_path) do %>
+      <%= link_to(destroy_user_session_path, method: :delete) do %>
         <li class="list-group-item">
           <i class="fa fa-power-off"></i>
           <span> Logout </span>
