--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,10 +12,12 @@
   <body>
     <%= render :partial => 'layouts/navbar' %>
     <div class="row container-fluid">
-      <div class="col-2">
-        <%= render :partial => 'layouts/side_bar_menu' %>
-      </div>
-      <div class="col-10">
+      <% if current_user %>
+        <div class="col-2">
+          <%= render :partial => 'layouts/side_bar_menu' %>
+        </div>
+      <% end %>
+      <div class="<%= current_user ? 'col-10' : 'col-12' %>">
         <%= yield %>
       </div>
     </div>
