few design restructures

--- a/app/assets/stylesheets/shared/colors.scss
+++ b/app/assets/stylesheets/shared/colors.scss
@@ -1,13 +1,19 @@
 $white: #FFF;
 $black: #000;
 
-$maya-blue: #73C2FB;
-$azure-blue: #0080FF;
-$egyptian-blue: #1034A6;
+$blue-1: #1034a6;
+$blue-2: #73C2FB;
+$blue-3: #0080FF;
+$blue-4: #05386b;
 
-$gray1: #808080;
-$light-gray1: #D3D3D3;
+$gray-1: #808080;
+$gray-2: #D3D3D3;
 
-$hibiscus-red: #B43757;
-$vermilion-red: #7E191B;
-$egyptian-blue: #1034a6;
+$red-1: #B43757;
+$red-2: #7E191B;
+
+$green-1: #3aafa9;
+$green-2: #2b7a78;
+$green-3: #043927;
+
+$dark-1:  #17252a;
