--- a/app/views/devise/shared/_social_auth_links.html.erb
+++ b/app/views/devise/shared/_social_auth_links.html.erb
@@ -1,13 +1,13 @@
 <div class="row justify-content-md-center">
   <div class="col-sm-10 col-lg-5">
     <%= link_to(root_path, class: 'auth--social-auth-link btn') do %>
-      <%= brand_image('google', 'auth--social-auth-icon') %>
+      <%= image_icon('google', 'auth--social-auth-icon') %>
       <span> Continue with Google </span>
     <% end %>
   </div>
   <div class="col-sm-10 col-lg-5">
     <%= link_to(root_path, class: 'auth--social-auth-link btn') do %>
-      <%= brand_image('facebook', 'auth--social-auth-icon') %>
+      <%= image_icon('facebook', 'auth--social-auth-icon') %>
       <span> Continue with Facebook </span>
     <% end %>
   </div>
