--- a/app/views/layouts/_side_bar_menu.html.erb
+++ b/app/views/layouts/_side_bar_menu.html.erb
@@ -1,58 +1,57 @@
 <nav class="side-bar__container">
   <div class="side-bar__user-details-summary text-center">
     <img src="https://robohash.org/superman" alt="user image" class="img-thumbnail">
-    <div class="side__bar-user-profile-link-container">
-      <%= link_to(current_user.email, root_path, class: 'side__bar-user-profile-link') %>
+    <div class="side-bar__user-profile-link-container">
+      <%= link_to(current_user.email, root_path) %>
     </div>
   </div>
-  <br>
   <div class="side-bar__menu-list-container">
     <ul class="list-group">
       <%= link_to(root_path) do %>
         <li class="list-group-item"> 
-          <i class="fa fa-meteor"></i>
+          <%= image_icon('dashboard', 'side-bar__menu-icon') %>
           <span> Dashboard </span>
         </li>
       <% end %>
 
       <%= link_to(root_path) do %>
         <li class="list-group-item">
-          <i class="fa fa-money-bill-alt"></i> 
+          <%= image_icon('income', 'side-bar__menu-icon') %> 
           <span> Income </span>
         </li>
       <% end %>
 
       <%= link_to(root_path) do %>
         <li class="list-group-item">
-          <i class="fa fa-money-bill-wave"></i>
+          <%= image_icon('expenses', 'side-bar__menu-icon') %>
           <span> Expenses </span>
         </li>
       <% end %>
 
       <%= link_to(root_path) do %>
         <li class="list-group-item">
-          <i class="fa fa-book"></i>
+          <%= image_icon('document', 'side-bar__menu-icon') %>
           <span> Documents </span>
         </li>
       <% end %>
 
       <%= link_to(root_path) do %>
         <li class="list-group-item">
-          <i class="fa fa-receipt"></i>
+          <%= image_icon('report', 'side-bar__menu-icon') %>
           <span> Reports </span>
         </li>
       <% end %>
 
       <%= link_to(root_path) do %>
         <li class="list-group-item">
-          <i class="fa fa-setting"></i>
+          <%= image_icon('settings', 'side-bar__menu-icon') %>
           <span> Settings </span>
         </li>
       <% end %>
 
       <%= link_to(destroy_user_session_path, method: :delete) do %>
         <li class="list-group-item">
-          <i class="fa fa-power-off"></i>
+          <%= image_icon('power', 'side-bar__menu-icon') %>
           <span> Logout </span>
         </li>
       <% end %>
