--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -3,68 +3,68 @@
 
 // HEADER NAVIGATION
 .navbar {
-  box-shadow: 0 0 20px $maya-blue;
-  -webkit-box-shadow: 0 0 20px $maya-blue;
-  -moz-box-shadow: 0 0 20px $maya-blue;
+  box-shadow: 0 0 20px $dark-1;
+  -webkit-box-shadow: 0 0 20px $dark-1;
+  -moz-box-shadow: 0 0 20px $dark-1;
   position: fixed;
   width: 100%;
   z-index: 999;
 
-  @include respond-to('xlarge') { 
-    padding: ($global-padding * 0.7) ($global-padding * 10);
-  };
+  @include respond-to('xlarge') { padding: ($global-padding * 0.7) ($global-padding * 10); };
 
-  @include respond-to('large') { 
-    padding: ($global-padding * 0.7) ($global-padding * 2);
-  };
+  @include respond-to('large') {  padding: ($global-padding * 0.7) ($global-padding * 2); };
 }
 
 .navbar__menu-bar {
   font-size: $global-font * 1.9;
   font-family: 'Lobster';
   cursor: pointer;
+  color: $green-2;
 }
 
 .navbar__auth {
   margin-right: $global-margin * 2;
   font-family: 'Lobster';
-  font-size: $global-font * 1.2;
+  font-size: $global-font * 1.3;
 }
 
 .navbar__auth-login {
-  color: $azure-blue;
+  color: $green-2;
+  font-weight: bold;
 
   &:hover {
-    color: $egyptian-blue;
+    color: $green-3;
     text-decoration: none;
   }
 }
 
 .navbar__auth-signup {
   color: $white;
-  background-color: $hibiscus-red;
+  background: $green-2;
   border-radius: $global-padding * 0.3;
-  padding: ($global-padding * 0.4) $global-padding;
+  padding: ($global-padding * 0.5) $global-padding;
+  transition: all 0.5s;
 
   &:hover {
     color: $white;
     text-decoration: none;
-    background-color: $vermilion-red;
+    background: $green-3;
   }
 }
 
 .navbar__brand-text {
   margin-left: $global-margin * 2;
-  font-size: $global-font * 1.7;
-  color: $hibiscus-red;
-  font-family: 'Comic Neue';
+  font-size: $global-font * 2;
+  color: $green-2;
+  padding: ($global-padding * 0.7) $global-margin;
+  font-family: 'Rouge Script', cursive; 
+  font-weight: normal;
+  text-shadow: 0 0 2px $green-2;
 
   &:hover {
-    color: $vermilion-red;
     text-decoration: none;
-  }
-  &:visited {
-    color: $vermilion-red;
+    background: $green-2;
+    color: $white;
   }
 }
 
@@ -72,25 +72,26 @@
   font-size: $global-font * 1.2;
   font-family: 'Lobster';
   font-style: italic;
-  color: $gray1;
+  color: $gray-1;
 }
 
 // SIDE-BAR NAVIGATION
 .side-bar__container {
-  background: $hibiscus-red;
-  width: 15%;
+  background: $green-1;
+  width: 17%;
   position: fixed;
-  margin-right: 30px;
+  margin-left: $global-margin;
   -moz-transition: all 0.5s;
   -webkit-transition: all 0.5s;
   -ms-transition: all 0.5s;
   transition: all 0.5s;
   box-shadow: none;
   height: calc(100vh - 120px);
-  border-radius: $global-padding * 0.2;
 
   .side-bar__user-details-summary {
     padding: $global-padding ($global-padding * 1.5);
+    padding-bottom: $global-margin * 3;
+    background: $green-2;
     color: $white;
 
     img {
@@ -98,7 +99,7 @@
       border-radius: 50%;
     }
 
-    .side__bar-user-profile-link-container {
+    .side-bar__user-profile-link-container {
       margin-top: $global-margin * 0.5;
 
       a {
@@ -111,18 +112,22 @@
   .side-bar__menu-list-container {
     ul {
       li {
-        background-color: $hibiscus-red;
+        background-color: $green-1;
+        border-radius: none !important;
 
         &:hover {
           cursor: pointer;
-          background-color: $vermilion-red;
+          background-color: $green-2;
         }
+
+        .side-bar__menu-icon { margin-right: $global-margin * 0.5; }
       }
     }
 
     a {
       color: $white;
       text-decoration: none;
+      font-size: $global-font * 1.1;
     }
   }
 }
@@ -131,24 +136,33 @@
 .auth--container {
   padding: $global-padding;
   margin: ($global-margin * 2) 0;
-  box-shadow: 0 0 5px $light-gray1;
-  -webkit-box-shadow: 0 0 5px $light-gray1;
-  -moz-box-shadow: 0 0 5px $light-gray1;
+  box-shadow: 0 0 5px $gray-2;
+  -webkit-box-shadow: 0 0 5px $gray-2;
+  -moz-box-shadow: 0 0 5px $gray-2;
   border-radius: $global-padding * 0.1;
 
   .auth--text {
     margin: ($global-margin * 2) 0 ($global-margin * 5);
     font-size: $global-font * 2;
     font-weight: lighter;
-    color: $gray1;
+    color: $gray-1;
   }
 
-  .row {
+  .row { 
     margin-bottom: $global-margin * 2;
+
+    input {
+      outline: none !important;
+      &:focus {
+        outline: none !important;
+        // border-color: $green-2;
+        // outline: 2px solid $green-2 !important;
+      }
+    }
   }
 
   .auth--error-message {
-    color: $hibiscus-red;
+    color: $red-1;
     float: left;
     font-size: $global-font * 0.9;
   }
@@ -157,17 +171,18 @@
 .auth--button {
   width: 100%;
   color: $white;
-  background-color: $hibiscus-red;
+  background-color: $green-2;
+  transition: all 0.5s;
 
   &:hover {
     color: $white;
-    background-color: $vermilion-red;
+    background-color: $green-3;
   }
 }
 
 .auth--alternative {
-  border-top: 1px solid $gray1;
-  color: $gray1;
+  border-top: 1px solid $gray-1;
+  color: $gray-1;
   opacity: 0.75;
 
   &:after {
@@ -181,7 +196,7 @@
 }
 
 .auth--social-auth-link {
-  box-shadow: 0 0 5px $light-gray1;
+  box-shadow: 0 0 5px $gray-2;
   border-radius: $global-padding * 0.2;
   width: 100%;
   padding: $global-padding * 0.6;
@@ -192,7 +207,14 @@
   }
 
   span {
-    color: $gray1;
+    color: $black;
     font-size: $global-font * 0.8;
   }
+}
+
+.auth--login-link,
+.auth--sign-up-link {
+  color: $green-2;
+
+  &:hover { color: $green-3; }
 }
