--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,41 +1,41 @@
 <div class="container">
   <div class="row justify-content-md-center">
     <div class="col-sm-12 col-lg-7 text-center auth--container">
-      <p class="auth--text"> Create Your Account </p>
+      <h4 class="auth--text"> Create Your Account </h4>
 
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
         <div class="row justify-content-md-center">
           <div class="col-sm-10 col-lg-5">
-            <%= f.text_field :first_name, autofocus: true, placeholder: 'First name', class: "form-control" %>
+            <%= f.text_field :first_name, autofocus: true, 'aria-label': 'First name', placeholder: 'First name', class: "form-control" %>
             <span class="auth--error-message"> <%= resource.errors.full_messages_for(:first_name).first %> </span>
           </div>
           <div class="col-sm-10 col-lg-5">
-            <%= f.text_field :last_name, autofocus: true, placeholder: 'Last name', class: "form-control" %>
+            <%= f.text_field :last_name, 'aria-label': 'Last name', placeholder: 'Last name', class: "form-control" %>
             <span class="auth--error-message"> <%= resource.errors.full_messages_for(:last_name).first %> </span>
           </div>
         </div>
 
         <div class="row justify-content-md-center">
           <div class="col-sm-10">
-            <%= f.email_field :email, autocomplete: "email", placeholder: 'Email', class: "form-control" %>
+            <%= f.email_field :email, autocomplete: "email", 'aria-label': 'Email', placeholder: 'Email', class: "form-control" %>
             <span class="auth--error-message"> <%= resource.errors.full_messages_for(:email).first %> </span>
           </div>
         </div>
 
         <div class="row justify-content-md-center">
           <div class="col-sm-10 col-lg-5">
-            <%= f.password_field :password, autocomplete: "new-password", placeholder: 'Password', class: "form-control" %>
+            <%= f.password_field :password, autocomplete: "new-password", 'aria-label': 'Passowrd', placeholder: 'Password', class: "form-control" %>
             <span class="auth--error-message"> <%= resource.errors.full_messages_for(:password).first %> </span>
           </div>
           <div class="col-sm-10 col-lg-5">
-            <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: 'Confirm password', class: "form-control" %>
+            <%= f.password_field :password_confirmation, autocomplete: "new-password", 'aria-label': 'Confirm password', placeholder: 'Confirm password', class: "form-control" %>
             <span class="auth--error-message"> <%= resource.errors.full_messages_for(:password_confirmation).first %> </span>
           </div>
         </div>
 
         <div class="row justify-content-md-center">
           <div class="col-sm-10">
-            <%= f.submit "Sign Up", class: 'btn auth--button' %>
+            <%= f.submit "Sign Up", 'aria-label': 'Sign up', class: 'btn auth--button' %>
           </div>
         </div>
       <% end %>
