--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,7 +1,9 @@
 <nav class="navbar navbar-light bg-light">
   <div>
-    <span class="navbar__menu-bar"> <i class="fa fa-bars"></i> <span>
-    <%= link_to raw('Xpense <span> Traka </span>'), root_path, class: 'navbar__brand-text' %>
+    <% if current_user %>
+      <span class="navbar__menu-bar"> <i class="fa fa-bars"></i> <span>
+    <% end %>
+    <%= link_to raw('Expense Traka'), root_path, class: 'navbar__brand-text' %>
   </div>
   <div>
     <% if current_user %>
