--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>XpensTraka</title>
     <%= csrf_meta_tags %>
@@ -13,11 +13,11 @@
     <%= render :partial => 'layouts/navbar' %>
     <div class="row container-fluid">
       <% if current_user %>
-        <div class="col-2">
+        <div class="col-3">
           <%= render :partial => 'layouts/side_bar_menu' %>
         </div>
       <% end %>
-      <div class="<%= current_user ? 'col-10' : 'col-12' %>">
+      <div class="<%= current_user ? 'col-9' : 'col-12' %>">
         <%= yield %>
       </div>
     </div>
