--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -25,9 +25,5 @@
     </div>
   </div>
 <% else %>
-  <div class="container text-center">
-    <div class="jumbotron">
-      <h1> Page for Un-Authenticated users. Design coming soon </h1>
-    </div>
-  </div>
+  <%= render 'homepage/landing_page' %>
 <% end %>
