--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -3,32 +3,29 @@
 
 // HEADER NAVIGATION
 .navbar {
-  box-shadow: 0 0 20px $dark-1;
-  -webkit-box-shadow: 0 0 20px $dark-1;
-  -moz-box-shadow: 0 0 20px $dark-1;
   position: fixed;
   width: 100%;
   z-index: 999;
+  border: none;
 
   @include respond-to('xlarge') { padding: ($global-padding * 0.7) ($global-padding * 10); };
-
   @include respond-to('large') {  padding: ($global-padding * 0.7) ($global-padding * 2); };
 }
 
-.navbar__menu-bar {
+.navbar--menu-bar {
   font-size: $global-font * 1.9;
   font-family: 'Lobster';
   cursor: pointer;
   color: $green-2;
 }
 
-.navbar__auth {
+.navbar--auth {
   margin-right: $global-margin * 2;
   font-family: 'Lobster';
   font-size: $global-font * 1.3;
 }
 
-.navbar__auth-login {
+.navbar--auth--login {
   color: $green-2;
   font-weight: bold;
 
@@ -38,7 +35,7 @@
   }
 }
 
-.navbar__auth-signup {
+.navbar--auth--signup {
   color: $white;
   background: $green-2;
   border-radius: $global-padding * 0.3;
@@ -52,23 +49,21 @@
   }
 }
 
-.navbar__brand-text {
+.navbar--brand-text {
   margin-left: $global-margin * 2;
   font-size: $global-font * 2;
   color: $green-2;
   padding: ($global-padding * 0.7) $global-margin;
   font-family: 'Rouge Script', cursive; 
   font-weight: normal;
-  text-shadow: 0 0 2px $green-2;
 
   &:hover {
     text-decoration: none;
-    background: $green-2;
-    color: $white;
+    color: $blue-1;
   }
 }
 
-.navbar__user-name {
+.navbar--user-name {
   font-size: $global-font * 1.2;
   font-family: 'Lobster';
   font-style: italic;
@@ -76,7 +71,7 @@
 }
 
 // SIDE-BAR NAVIGATION
-.side-bar__container {
+.side-bar--container {
   background: $green-1;
   width: 17%;
   position: fixed;
@@ -88,7 +83,7 @@
   box-shadow: none;
   height: calc(100vh - 120px);
 
-  .side-bar__user-details-summary {
+  .side-bar--user-details-summary {
     padding: $global-padding ($global-padding * 1.5);
     padding-bottom: $global-margin * 3;
     background: $green-2;
@@ -99,7 +94,7 @@
       border-radius: 50%;
     }
 
-    .side-bar__user-profile-link-container {
+    .side-bar--user-profile-link-container {
       margin-top: $global-margin * 0.5;
 
       a {
@@ -109,7 +104,7 @@
     }
   }
 
-  .side-bar__menu-list-container {
+  .side-bar--menu-list-container {
     ul {
       li {
         background-color: $green-1;
@@ -120,7 +115,7 @@
           background-color: $green-2;
         }
 
-        .side-bar__menu-icon { margin-right: $global-margin * 0.5; }
+        .side-bar--menu-icon { margin-right: $global-margin * 0.5; }
       }
     }
 
@@ -150,15 +145,6 @@
 
   .row { 
     margin-bottom: $global-margin * 2;
-
-    input {
-      outline: none !important;
-      &:focus {
-        outline: none !important;
-        // border-color: $green-2;
-        // outline: 2px solid $green-2 !important;
-      }
-    }
   }
 
   .auth--error-message {
@@ -217,4 +203,23 @@
   color: $green-2;
 
   &:hover { color: $green-3; }
+}
+
+// LANDING PAGE
+.landing-page--container {
+  margin-top: $global-margin * 4 !important;
+
+  .landing-page--title {
+    font-size: 30px;
+    margin: 0;
+    font-family: 'Comic Neue';
+  }
+
+  .landing-page--subtitle {
+    font-size: $global-font * 2;
+    color: #8198ae;
+    margin: $global-margin;
+    margin-bottom: $global-margin * 10;
+    font-family: 'Rouge Script', cursive; 
+  }
 }
