--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,3 +24,9 @@
   background-repeat:no-repeat;
   background-position: center;
 }
+
+.alert-notice {
+  color:#0c5460;
+  background-color:#d1ecf1;
+  border-color:#bee5eb
+}
