--- a/app/assets/stylesheets/homepage.scss
+++ b/app/assets/stylesheets/homepage.scss
@@ -1,1 +1,21 @@
-// @import 'bootstrap/dist/css/bootstrap';
+@import "shared/colors";
+@import "shared/variables";
+
+// LANDING PAGE
+.landing-page--container {
+  margin-top: $global-margin * 4 !important;
+
+  .landing-page--title {
+    font-size: 30px;
+    margin: 0;
+    font-family: 'Comic Neue';
+  }
+
+  .landing-page--subtitle {
+    font-size: $global-font * 2;
+    color: #8198ae;
+    margin: $global-margin;
+    margin-bottom: $global-margin * 10;
+    font-family: 'Rouge Script', cursive; 
+  }
+}
