--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -204,3 +204,17 @@
 
   &:hover { color: $green-3; }
 }
+
+
+// alert bars
+.alert-notice {
+  color: $green-4;
+  background-color: $green-5;
+  border-color: $green-6;
+}
+
+.alert-alert {
+  color: $red-3;
+  background-color: $red-4;
+  border-color: $red-5;
+}
