--- a/app/assets/stylesheets/shared/colors.scss
+++ b/app/assets/stylesheets/shared/colors.scss
@@ -11,9 +11,15 @@ $gray-2: #D3D3D3;
 
 $red-1: #B43757;
 $red-2: #7E191B;
+$red-3: #721c24;
+$red-4: #f8d7da;
+$red-5: #f5c6cb;
 
 $green-1: #3aafa9;
 $green-2: #2b7a78;
 $green-3: #043927;
+$green-4: #0c5460;
+$green-5: #d1ecf1;
+$green-6: #bee5eb;
 
 $dark-1:  #17252a;
