income migration and scaffolds

--- a/app/views/layouts/_side_bar_menu.html.erb
+++ b/app/views/layouts/_side_bar_menu.html.erb
@@ -16,6 +16,13 @@
 
       <%= link_to(root_path) do %>
         <li class="list-group-item">
+          <%= image_icon('budget', 'side-bar--menu-icon') %> 
+          <span> Monthly Budget </span>
+        </li>
+      <% end %>
+
+      <%= link_to(root_path) do %>
+        <li class="list-group-item">
           <%= image_icon('income', 'side-bar--menu-icon') %> 
           <span> Income </span>
         </li>
