--- a/app/views/incomes/index.html.erb
+++ b/app/views/incomes/index.html.erb
@@ -1,25 +1,31 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Incomes</h1>
+<div class="row">
+  <div class="col col-md-9">
+    <h2>Incomes List</h2>
+  </div>
 
-<table>
+  <div class="col col-md-3">
+    <%= link_to 'New Income', new_income_path, class: 'incomes--new-income-link btn btn-success' %>
+  </div>
+</div>
+
+<table class="table">
   <thead>
     <tr>
-      <th>User</th>
-      <th>Category</th>
-      <th>Date</th>
-      <th>Amount</th>
-      <th colspan="3"></th>
+      <th scope="col">Category</th>
+      <th scope="col">Amount</th>
+      <th scope="col">Date</th>
+      <th colspan="3"> Actions </th>
     </tr>
   </thead>
 
   <tbody>
     <% @incomes.each do |income| %>
       <tr>
-        <td><%= income.user_id %></td>
         <td><%= income.category %></td>
-        <td><%= income.date %></td>
         <td><%= income.amount %></td>
+        <td><%= income.date %></td>
         <td><%= link_to 'Show', income %></td>
         <td><%= link_to 'Edit', edit_income_path(income) %></td>
         <td><%= link_to 'Destroy', income, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -27,7 +33,3 @@
     <% end %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to 'New Income', new_income_path %>
