--- a/app/views/layouts/_side_bar_menu.html.erb
+++ b/app/views/layouts/_side_bar_menu.html.erb
@@ -21,7 +21,7 @@
         </li>
       <% end %>
 
-      <%= link_to(root_path) do %>
+      <%= link_to(incomes_path) do %>
         <li class="list-group-item">
           <%= image_icon('income', 'side-bar--menu-icon') %> 
           <span> Income </span>
