--- a/app/views/layouts/_side_bar_menu.html.erb
+++ b/app/views/layouts/_side_bar_menu.html.erb
@@ -28,7 +28,7 @@
         </li>
       <% end %>
 
-      <%= link_to(root_path) do %>
+      <%= link_to(expenses_path) do %>
         <li class="list-group-item">
           <%= image_icon('expenses', 'side-bar--menu-icon') %>
           <span> Expenses </span>
