add or remove navbar background on window scroll

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -70,6 +70,8 @@
   color: $gray-1;
 }
 
+.navbar--background-color { background-color: $white !important; }
+
 // SIDE-BAR NAVIGATION
 .side-bar--container {
   background: $green-1;
