--- a/app/views/incomes/_form.html.erb
+++ b/app/views/incomes/_form.html.erb
@@ -1,32 +1,37 @@
-<%= form_with(model: income, local: true) do |form| %>
-  <% if income.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(income.errors.count, "error") %> prohibited this income from being saved:</h2>
+<%= form_with(model: income, local: true) do |f| %>
+  <div class="row justify-content-md-center">
+    <div class="col-sm-12 col-lg-7 auth--container">
+      <h4 class="auth--text text-center"> <%= form_title %> </h4>
 
-      <ul>
-        <% income.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
-        <% end %>
-      </ul>
+      <div class="row justify-content-md-center">
+        <div class="col-sm-10 form-group">
+          <%= f.label :category %>
+          <select class="form-control" id='income_category' name="income[category]">
+            <option value="salary" <%="selected" if income.category == 'salary' %>> salary </option>
+            <option value="others" <%="selected" if income.category == 'others' %>> others </option>
+          </select>
+          <span class="auth--error-message"> <%= income.errors.full_messages_for(:category).first %> </span>
+        </div>
+      </div>
+
+      <div class="row justify-content-md-center">
+        <div class="col-sm-10 col-lg-5">
+          <%= f.label :date %>
+          <%= f.text_field :date, placeholder: 'mm/dd/yyyy', class: "form-control datepicker" %>
+          <span class="auth--error-message"> <%= income.errors.full_messages_for(:date).first %> </span>
+        </div>
+        <div class="col-sm-10 col-lg-5">
+          <%= f.label :amount %>
+          <%= f.text_field :amount, placeholder: '5000', class: "form-control" %>
+          <span class="auth--error-message"> <%= income.errors.full_messages_for(:amount).first %> </span>
+        </div>
+      </div>
+
+      <div class="row justify-content-md-center">
+        <div class="col-sm-10">
+          <%= f.submit "Save Changes", 'aria-label': 'Sign up', class: 'btn auth--button' %>
+        </div>
+      </div>
     </div>
-  <% end %>
-
-  <div class="field">
-    <%= form.label :category %>
-    <%= form.number_field :category %>
-  </div>
-
-  <div class="field">
-    <%= form.label :date %>
-    <%= form.date_select :date %>
-  </div>
-
-  <div class="field">
-    <%= form.label :amount %>
-    <%= form.text_field :amount %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit %>
   </div>
 <% end %>
