--- a/app/views/incomes/edit.html.erb
+++ b/app/views/incomes/edit.html.erb
@@ -1,6 +1,22 @@
-<h1>Editing Income</h1>
+<div class="income-section">
+  <div class="row">
+    <div class="col col-md-9">
+      <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item"> <%= link_to 'Home', root_path  %> </li>
+          <li class="breadcrumb-item"> <%= link_to 'Incomes', incomes_path  %> </li>
+          <li class="breadcrumb-item"> <%= link_to "Income - #{@income.id}", @income  %> </li>
+          <li class="breadcrumb-item active" aria-current="edit income page">Edit</li>
+        </ol>
+      </nav>
+    </div>
 
-<%= render 'form', income: @income %>
+    <div class="col col-md-3">
+      <%= link_to(incomes_path, class: 'incomes--new-income-link btn btn-success') do %>
+        <i class="fa fa-arrow-left"></i> Back
+      <% end %>
+    </div>
+  </div>
 
-<%= link_to 'Show', @income %> |
-<%= link_to 'Back', incomes_path %>
+  <%= render 'form', income: @income, form_title: 'Edit Income' %>
+</div>
