--- a/app/views/incomes/index.html.erb
+++ b/app/views/incomes/index.html.erb
@@ -1,35 +1,41 @@
-<p id="notice"><%= notice %></p>
 
-<div class="row">
-  <div class="col col-md-9">
-    <h3>Incomes List</h3>
+<div class="income-section">
+  <div class="row">
+    <div class="col col-md-9">
+      <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item"> <%= link_to 'Home', root_path  %> </li>
+          <li class="breadcrumb-item active" aria-current="incomes list page"> Incomes </li>
+        </ol>
+      </nav>
+    </div>
+
+    <div class="col col-md-3">
+      <%= link_to 'New Income', new_income_path, class: 'incomes--new-income-link btn btn-success' %>
+    </div>
   </div>
 
-  <div class="col col-md-3">
-    <%= link_to 'New Income', new_income_path, class: 'incomes--new-income-link btn btn-success' %>
-  </div>
-</div>
-
-<table class="table">
-  <thead>
-    <tr>
-      <th scope="col">Category</th>
-      <th scope="col">Amount</th>
-      <th scope="col">Date</th>
-      <th colspan="3"> Actions </th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @incomes.each do |income| %>
+  <table class="table">
+    <thead>
       <tr>
-        <td><%= income.category %></td>
-        <td><%= income.amount %></td>
-        <td><%= income.date %></td>
-        <td><%= link_to 'Show', income %></td>
-        <td><%= link_to 'Edit', edit_income_path(income) %></td>
-        <td><%= link_to 'Destroy', income, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th scope="col">Category</th>
+        <th scope="col">Amount</th>
+        <th scope="col">Date</th>
+        <th colspan="3"> Actions </th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+
+    <tbody>
+      <% @incomes.each do |income| %>
+        <tr>
+          <td><%= income.category %></td>
+          <td> <span> &#8358; </span> <%= income.amount %></td>
+          <td><%= income.date %></td>
+          <td><%= link_to 'Show', income %></td>
+          <td><%= link_to 'Edit', edit_income_path(income) %></td>
+          <td><%= link_to 'Destroy', income, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
