--- a/app/views/components/_modal.html.erb
+++ b/app/views/components/_modal.html.erb
@@ -1,12 +1,10 @@
-<div class="modal-dialog" role="document">
-  <div class="modal-content">
-    <div class="modal-header">
-      <h5 class="modal-title" id="exampleModalLongTitle"> <%= modal_title %> </h5>
-      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-      </button>
+<div class="modal-display--dialog" role="document">
+  <div class="modal-display--content">
+    <div class="modal-display--header">
+      <h5 class="modal-display--title" id="exampleModalLongTitle"> <%= modal_title %> </h5>
+      <span class="close modal-display--close-icon" aria-label="Close">&times;</span>
     </div>
-    <div class="modal-body">
+    <div class="modal-display--body">
       <%= content %>
     </div>
   </div>
