--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,6 +16,7 @@
  *= require_self
  *= require shared/mixins
  *= require main
+ *= require components/modal
  *= require pickadate/default
  *= require pickadate/default.date
 */
