--- a/app/views/incomes/_form.html.erb
+++ b/app/views/incomes/_form.html.erb
@@ -31,7 +31,11 @@
         <div class="col-sm-10 file-input">
           <%= f.file_field :image, accept: '.jpg, .jpeg, .gif, .png, .svg' %>
           <span class='button'>Add payslip <em>(optional)</em></span>
-          <span class='label' data-js-label>No file selected</label>
+          <% if income.image.present? %>
+            <span class='label' data-js-label> <%= cl_image_tag(income.image, options = { class: 'incomes--image-span' }) %> </span>
+          <% else %>
+            <span class='label' data-js-label>No file selected</span>
+          <% end %>
         </div>
       </div>
       
