--- a/app/views/incomes/index.html.erb
+++ b/app/views/incomes/index.html.erb
@@ -1,41 +1,63 @@
-
-<div class="income-section">
-  <div class="row">
-    <div class="col col-md-9">
-      <nav aria-label="breadcrumb">
-        <ol class="breadcrumb">
-          <li class="breadcrumb-item"> <%= link_to 'Home', root_path  %> </li>
-          <li class="breadcrumb-item active" aria-current="incomes list page"> Incomes </li>
-        </ol>
-      </nav>
-    </div>
-
-    <div class="col col-md-3">
-      <%= link_to 'New Income', new_income_path, class: 'incomes--new-income-link btn btn-success' %>
-    </div>
+<div class="row">
+  <div class="col col-md-9">
+    <nav aria-label="breadcrumb">
+      <ol class="breadcrumb">
+        <li class="breadcrumb-item"> <%= link_to 'Home', root_path  %> </li>
+        <li class="breadcrumb-item active" aria-current="incomes list page"> Incomes </li>
+      </ol>
+    </nav>
   </div>
 
-  <table class="table">
-    <thead>
-      <tr>
-        <th scope="col">Category</th>
-        <th scope="col">Amount</th>
-        <th scope="col">Date</th>
-        <th colspan="3"> Actions </th>
-      </tr>
-    </thead>
-
-    <tbody>
-      <% @incomes.each do |income| %>
-        <tr>
-          <td><%= income.category %></td>
-          <td> <span> &#8358; </span> <%= income.amount %></td>
-          <td><%= income.date %></td>
-          <td><%= link_to 'Show', income %></td>
-          <td><%= link_to 'Edit', edit_income_path(income) %></td>
-          <td><%= link_to 'Destroy', income, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        </tr>
-      <% end %>
-    </tbody>
-  </table>
+  <div class="col col-md-3">
+    <%= link_to 'New Income', new_income_path, class: 'incomes--new-income-link btn btn-success' %>
+  </div>
 </div>
+
+<table class="table">
+  <thead>
+    <tr>
+      <th scope="col">Category</th>
+      <th scope="col">Amount</th>
+      <th scope="col">Date</th>
+      <th scope="col">Payslip</th>
+      <th colspan="2" class="incomes--actions-field"> Actions </th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @incomes.each do |income| %>
+      <tr>
+        <td><%= income.category %></td>
+        <td> <span> &#8358; </span> <%= income.amount %></td>
+        <td><%= income.date.strftime("%e %B, %Y") %></td>
+        <td class="incomes--actions-field">
+          <% if income.image.present? %>
+            <button class="btn modal-pop--trigger">
+              <%= image_icon('view', 'side-bar--menu-icon') %>
+            </button>
+            <%= modal(options: { modal_title: "Income - #{income.id} (Payslip)" }, html_options: { class: "modal-display" }) do %>
+              <%= cl_image_tag(income.image, options = { class: 'incomes--payslip' }) %>
+            <% end %>
+          <% end %>
+        </td>
+        <td class="incomes--actions-field">
+          <%= link_to(edit_income_path(income)) do %>
+            <%= image_icon('edit', 'side-bar--menu-icon') %>
+          <% end %>
+        </td>
+        <td class="incomes--actions-field">
+          <button class="btn modal-pop--trigger">
+            <%= image_icon('delete', 'side-bar--menu-icon') %>
+          </button>
+          <%= modal(options: { modal_title: "Delete Income - #{income.id}" }, html_options: { class: "modal-display" }) do %>
+            <%= "Are you sure you want to delete Income (#{income.category} - #{income.id})?" %>
+            <hr>
+            <div class="float-right">
+              <%= link_to 'Delete', income, method: :delete, class: 'btn btn-danger modal-display--action-button' %>
+            </div>
+          <% end %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
