--- a/app/views/expenses/index.html.erb
+++ b/app/views/expenses/index.html.erb
@@ -2,7 +2,12 @@
 
 <div class="row">
   <div class="col col-md-9">
-    <h3>Expenses List</h3>
+    <nav aria-label="breadcrumb">
+      <ol class="breadcrumb">
+        <li class="breadcrumb-item"> <%= link_to 'Home', root_path  %> </li>
+        <li class="breadcrumb-item active" aria-current="expenses list page"> Expenses </li>
+      </ol>
+    </nav>
   </div>
 
   <div class="col col-md-3">
@@ -16,7 +21,8 @@
       <th scope="col">Category</th>
       <th scope="col">Amount</th>
       <th scope="col">Date</th>
-      <th colspan="3"> Actions </th>
+      <th scope="col">Receipt</th>
+      <th colspan="2" class="incomes--actions-field"> Actions </th>
     </tr>
   </thead>
 
@@ -24,11 +30,35 @@
     <% @expenses.each do |expense| %>
       <tr>
         <td><%= expense.category %></td>
-        <td><%= expense.amount %></td>
-        <td><%= expense.date %></td>
-        <td><%= link_to 'Show', expense %></td>
-        <td><%= link_to 'Edit', edit_expense_path(expense) %></td>
-        <td><%= link_to 'Destroy', expense, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td> <span> &#8358; </span> <%= expense.amount %></td>
+        <td><%= expense.date.strftime("%e %B, %Y") %></td>
+        <td class="incomes--actions-field">
+          <% if expense.image.present? %>
+            <button class="btn modal-pop--trigger">
+              <%= image_icon('view', 'side-bar--menu-icon') %>
+            </button>
+            <%= modal(options: { modal_title: "Expense - #{expense.id} (Payslip)" }, html_options: { class: "modal-display" }) do %>
+              <%= cl_image_tag(expense.image, options = { class: 'incomes--payslip' }) %>
+            <% end %>
+          <% end %>
+        </td>
+        <td class="incomes--actions-field">
+          <%= link_to(edit_expense_path(expense)) do %>
+            <%= image_icon('edit', 'side-bar--menu-icon') %>
+          <% end %>
+        </td>
+        <td class="incomes--actions-field">
+          <button class="btn modal-pop--trigger">
+            <%= image_icon('delete', 'side-bar--menu-icon') %>
+          </button>
+          <%= modal(options: { modal_title: "Delete Expense - #{expense.id}" }, html_options: { class: "modal-display" }) do %>
+            <%= "Are you sure you want to delete Expense (#{expense.category} - #{expense.id})?" %>
+            <hr>
+            <div class="float-right">
+              <%= link_to 'Delete', expense, method: :delete, class: 'btn btn-danger modal-display--action-button' %>
+            </div>
+          <% end %>
+        </td>
       </tr>
     <% end %>
   </tbody>
