--- a/app/assets/stylesheets/incomes.scss
+++ b/app/assets/stylesheets/incomes.scss
@@ -11,8 +11,6 @@
     position: absolute;
     top: 0;
     left: 0;
-    // width: 100%;
-    // height: 100%;
     opacity: 0;
     z-index: 10;
     cursor: pointer;
@@ -60,4 +58,12 @@
 
 .incomes--image-span {
   width: $global-padding * 4;
+}
+
+.table {
+  td {
+    font-size: $global-font * 0.8;
+    line-height: $global-font * 2;
+    padding: $global-padding * 0.3 !important;
+  }
 }
