--- a/app/views/expenses/index.html.erb
+++ b/app/views/expenses/index.html.erb
@@ -15,7 +15,7 @@
   </div>
 </div>
 
-<table class="table">
+<table class="table table-bordered">
   <thead>
     <tr>
       <th scope="col">Category</th>
