--- a/app/views/incomes/index.html.erb
+++ b/app/views/incomes/index.html.erb
@@ -13,7 +13,7 @@
   </div>
 </div>
 
-<table class="table">
+<table class="table table-bordered">
   <thead>
     <tr>
       <th scope="col">Category</th>
