--- a/app/assets/stylesheets/incomes.scss
+++ b/app/assets/stylesheets/incomes.scss
@@ -64,6 +64,7 @@
   td {
     font-size: $global-font * 0.8;
     line-height: $global-font * 2;
-    padding: $global-padding * 0.3 !important;
+    padding-top: ($global-padding * 0.3);
+    padding-bottom: ($global-padding * 0.3);
   }
 }
