--- a/app/views/components/_modal.html.erb
+++ b/app/views/components/_modal.html.erb
@@ -1,4 +1,4 @@
-<div class="modal-display--dialog" role="document">
+<div class="modal-display--dialog">
   <div class="modal-display--content">
     <div class="modal-display--header">
       <h5 class="modal-display--title" id="exampleModalLongTitle"> <%= modal_title %> </h5>
