--- a/app/assets/stylesheets/components/modal.scss
+++ b/app/assets/stylesheets/components/modal.scss
@@ -24,15 +24,15 @@
   display: flex;
   -ms-flex-direction: column;
   flex-direction: column;
-  width: 40%;
+  width: 50%;
   margin: auto;
   margin-top: $global-margin * 10;
   pointer-events: auto;
-  background-color: $white;
+  background: $white;
   background-clip: padding-box;
-  border-radius: .3rem;
   outline: 0;
   padding: $global-padding;
+  box-shadow: 0 .2em 1em hsla(20, 20, 20, 20%);
 
   transition: -webkit-transform .3s ease-out;
   transition: transform .3s ease-out;
