--- a/app/views/incomes/_form.html.erb
+++ b/app/views/incomes/_form.html.erb
@@ -11,7 +11,7 @@
         </div>
         <div class="col-sm-10 col-lg-5">
           <%= f.label :amount %>
-          <%= f.text_field :amount, placeholder: '5000', class: "form-control" %>
+          <%= f.number_field :amount, placeholder: '5000', class: "form-control" %>
           <span class="auth--error-message"> <%= income.errors.full_messages_for(:amount).first %> </span>
         </div>
       </div>
