--- a/app/views/incomes/index.html.erb
+++ b/app/views/incomes/index.html.erb
@@ -14,7 +14,7 @@
 </div>
 
 <table class="table table-bordered">
-  <thead>
+  <thead class="thead-light">
     <tr>
       <th scope="col">Category</th>
       <th scope="col">Amount</th>
